# autosauce-test

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  default.profraw  vcpkg-configuration.json  vcpkg.json
.github/workflows/: branch-on-issue.yml  branch-pr-on-issue.yml  delete-on-merge.yml  manage-pr-on-commit.yml  manage-pr-on-review.yml  mark-ipr-on-commit.yml  mark-review-when-assign.yml  mark-review-when-ready.yml  set-ipr-on-commit.yml
assets/: default.frag  default.vert
include/animation/: AnimationProperties.hpp  CollisionDetection.hpp  DerivFunc.hpp  ODEsolver.hpp  QPsolver.hpp
include/modeling/: Camera.hpp  Manager.hpp  Material.hpp  Mesh.hpp  Model.hpp  ModelLoader.hpp  ModelProperties.hpp  material.hpp
include/rendering/: BRDF.hpp  Bloom.hpp  LightProperties.hpp  Quad.hpp  RenderProperties.hpp  irradianceMap.hpp  pbrPreProcessing.hpp
include/shared/: Logger.hpp  Object.hpp  Scene.hpp  Shader.hpp
include/utils/: Logger.hpp  Shader.hpp
src/: main.cpp
src/animation/: AnimationProperties.cpp  CMakeLists.txt  CollisionDetection.cpp  DerivFunc.cpp  ImportantThing.cpp  ODEsolver.cpp  QPsolver.cpp
src/modeling/: CMakeLists.txt  Camera.cpp  Manager.cpp  Material.cpp  Mesh.cpp  Model.cpp  ModelLoader.cpp  ModelProperties.cpp  material.cpp
src/rendering/: BRDF.cpp  Bloom.cpp  CMakeLists.txt  LightProperties.cpp  Quad.cpp  RenderProperties.cpp  irradianceMap.cpp  pbrPreProcessing.cpp
src/rendering/shaders/: irradiancemap.frag  irradiancemap.vert
src/rendering/shaders/bloom/: bloom_blend.frag  blur.frag
src/rendering/shaders/pbr/: background.frag  brdf.frag  brdf.fs  irradiance.frag  pbr.frag  pbr.vs  prefilter.frag
src/shared/: CMakeLists.txt  Logger.cpp  Object.cpp  Scene.cpp  Shader.cpp
src/utils/: CMakeLists.txt  Logger.cpp  Shader.cpp
test/: CMakeLists.txt
test/animation/: AnimationProperties_test.cpp  Bounding_test.cpp  CollisionDetection_test.cpp  DerivFunc_test.cpp  ODEsolver_test.cpp  inertia_test.cpp
test/assets/: unitcube.gltf
test/modeling/: Camera_test.cpp  Mesh_test.cpp  ModelLoader_test.cpp
test/shared/: Logger_test.cpp  Shader_test.cpp
test/utils/: Logger_test.cpp  Shader_test.cpp
tests/animation/: ODEtests.cpp
